name:                nrelic
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable nrelic
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts
  main-is:             Main.hs
  build-tools:         hsc2hs
  build-depends:       base >=4.7 && <4.8
                     , bytestring
                     , helics
                     , time
                     , transformers
                     , unix
                     , void
